--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -318,8 +318,37 @@ Resources:
           integration.request.header.Content-Type: method.request.header.Content-Type
         IntegrationResponses:
           - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
       MethodResponses:
         - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+
+  # OPTIONS /photos/{item} (CORS)
+  PhotosOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref PhotoSearchAPI
+      ResourceId: !Ref PhotosItemResource
+      HttpMethod: OPTIONS
+      AuthorizationType: NONE
+      Integration:
+        Type: MOCK
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,PUT,OPTIONS'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+            ResponseTemplates:
+              application/json: "{\"statusCode\": 200}"
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+            method.response.header.Access-Control-Allow-Origin: true
 
   # Permission for API Gateway to invoke Search Lambda
   SearchApiPermission:
@@ -333,7 +362,7 @@ Resources:
   # Deployment
   ApiDeployment:
     Type: AWS::ApiGateway::Deployment
-    DependsOn: [SearchMethod, PhotosPutMethod]
+    DependsOn: [SearchMethod, PhotosPutMethod, PhotosOptionsMethod]
     Properties:
       RestApiId: !Ref PhotoSearchAPI
       StageName: prod
