--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -16,9 +16,6 @@ Parameters:
     Default: search-photo-search-domain-rg6hkoqgeppjek26gl5sf2kaxy.us-east-1.es.amazonaws.com
 
 Resources:
-  # ------------------------------------------------------------------
-  # S3 BUCKETS
-  # ------------------------------------------------------------------
   PhotosBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -26,7 +23,7 @@ Resources:
       CorsConfiguration:
         CorsRules:
           - AllowedHeaders: ['*']
-            AllowedMethods: ['GET', 'PUT', 'POST', 'HEAD']
+            AllowedMethods: ['GET','PUT','POST','HEAD']
             AllowedOrigins: ['*']
 
   FrontendBucket:
@@ -50,12 +47,9 @@ Resources:
         Statement:
           - Effect: Allow
             Principal: '*'
-            Action: 's3:GetObject'
-            Resource: !Sub 'arn:aws:s3:::${FrontendBucketName}/*'
+            Action: s3:GetObject
+            Resource: !Sub arn:aws:s3:::${FrontendBucketName}/*
 
-  # ------------------------------------------------------------------
-  # IAM ROLES
-  # ------------------------------------------------------------------
   LambdaExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -89,11 +83,8 @@ Resources:
             Statement:
               - Effect: Allow
                 Action: s3:PutObject
-                Resource: !Sub 'arn:aws:s3:::${PhotosBucketName}/*'
+                Resource: !Sub arn:aws:s3:::${PhotosBucketName}/*
 
-  # ------------------------------------------------------------------
-  # LAMBDA FUNCTIONS (Inline Code)
-  # ------------------------------------------------------------------
   SearchPhotosLambda:
     Type: AWS::Lambda::Function
     Properties:
@@ -109,13 +100,12 @@ Resources:
           import urllib3
           from botocore.auth import SigV4Auth
           from botocore.awsrequest import AWSRequest
-          
+
           REGION = 'us-east-1'
           HOST = 'search-photo-search-domain-rg6hkoqgeppjek26gl5sf2kaxy.us-east-1.es.amazonaws.com'
           INDEX = 'photos'
-          
           credentials = boto3.Session().get_credentials()
-          
+
           def sign_and_post(url, payload):
               service = 'es'
               request = AWSRequest(method='POST', url=url, data=json.dumps(payload))
@@ -124,13 +114,14 @@ Resources:
               headers = dict(request.headers)
               headers['Content-Type'] = 'application/json'
               return http.request('POST', url, body=json.dumps(payload), headers=headers)
-          
+
           def search_opensearch(keyword):
               url = f"https://{HOST}/{INDEX}/_search"
               query = {"query": {"match": {"labels": keyword}}}
               try:
                   response = sign_and_post(url, query)
-                  if response.status != 200: return []
+                  if response.status != 200:
+                      return []
                   data = json.loads(response.data.decode('utf-8'))
                   hits = data.get('hits', {}).get('hits', [])
                   results = []
@@ -144,29 +135,28 @@ Resources:
               except Exception as e:
                   print(e)
                   return []
-          
+
           def lambda_handler(event, context):
               q = event.get('queryStringParameters', {}).get('q', '')
-              if not q: return {'statusCode': 400, 'body': json.dumps("No query")}
-              
+              if not q:
+                  return {'statusCode': 400, 'body': json.dumps("No query")}
               keywords = q.split()
-              stop_words = ['show', 'me', 'photos', 'of', 'and', 'in']
+              stop_words = ['show','me','photos','of','and','in']
               keywords = [k for k in keywords if k.lower() not in stop_words]
-              
               all_results = []
               for k in keywords:
                   res = search_opensearch(k)
-                  if not res and k.endswith('s'): res = search_opensearch(k[:-1])
+                  if not res and k.endswith('s'):
+                      res = search_opensearch(k[:-1])
                   all_results.extend(res)
-              
               unique = {v['url']: v for v in all_results}.values()
               return {
-                  "statusCode": 200,
-                  "headers": {
-                      "Access-Control-Allow-Origin": "*",
-                      "Content-Type": "application/json"
+                  'statusCode': 200,
+                  'headers': {
+                      'Access-Control-Allow-Origin': '*',
+                      'Content-Type': 'application/json'
                   },
-                  "body": json.dumps(list(unique))
+                  'body': json.dumps(list(unique))
               }
 
   IndexPhotosLambda:
@@ -186,15 +176,14 @@ Resources:
           import urllib3
           from botocore.auth import SigV4Auth
           from botocore.awsrequest import AWSRequest
-          
+
           REGION = 'us-east-1'
           HOST = 'search-photo-search-domain-rg6hkoqgeppjek26gl5sf2kaxy.us-east-1.es.amazonaws.com'
           INDEX = 'photos'
-          
           s3 = boto3.client('s3')
           rekognition = boto3.client('rekognition')
           credentials = boto3.Session().get_credentials()
-          
+
           def sign_and_post(url, payload):
               service = 'es'
               request = AWSRequest(method='POST', url=url, data=json.dumps(payload))
@@ -203,44 +192,36 @@ Resources:
               headers = dict(request.headers)
               headers['Content-Type'] = 'application/json'
               return http.request('POST', url, body=json.dumps(payload), headers=headers)
-          
+
           def lambda_handler(event, context):
               for record in event['Records']:
                   bucket = record['s3']['bucket']['name']
                   key = urllib.parse.unquote_plus(record['s3']['object']['key'])
-                  
-                  # Metadata
                   try:
                       head = s3.head_object(Bucket=bucket, Key=key)
-                      # Handle both header cases
                       meta = head.get('Metadata', {})
                       cl = meta.get('customlabels', '') or meta.get('customLabels', '')
                       custom_labels = [x.strip() for x in cl.split(',')] if cl else []
-                  except: custom_labels = []
-                  
-                  # Rekognition
+                  except:
+                      custom_labels = []
                   try:
-                      rek = rekognition.detect_labels(Image={'S3Object':{'Bucket':bucket,'Name':key}}, MaxLabels=10)
+                      rek = rekognition.detect_labels(
+                          Image={'S3Object': {'Bucket': bucket, 'Name': key}},
+                          MaxLabels=10
+                      )
                       rek_labels = [l['Name'] for l in rek['Labels']]
-                  except: rek_labels = []
-                  
-                  all_labels = list(set(custom_labels + rek_labels))
-                  
+                  except:
+                      rek_labels = []
                   doc = {
-                      "objectKey": key,
-                      "bucket": bucket,
-                      "createdTimestamp": datetime.utcnow().isoformat(),
-                      "labels": all_labels
+                      'objectKey': key,
+                      'bucket': bucket,
+                      'createdTimestamp': datetime.utcnow().isoformat(),
+                      'labels': list(set(custom_labels + rek_labels))
                   }
-                  
                   url = f"https://{HOST}/{INDEX}/_doc/"
                   sign_and_post(url, doc)
-                  
               return {'statusCode': 200, 'body': json.dumps('Indexed')}
 
-  # ------------------------------------------------------------------
-  # S3 TRIGGER PERMISSION
-  # ------------------------------------------------------------------
   LambdaInvokePermission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -248,11 +229,8 @@ Resources:
       Action: lambda:InvokeFunction
       Principal: s3.amazonaws.com
       SourceAccount: !Ref AWS::AccountId
-      SourceArn: !Sub 'arn:aws:s3:::${PhotosBucketName}'
+      SourceArn: !Sub arn:aws:s3:::${PhotosBucketName}
 
-  # ------------------------------------------------------------------
-  # API GATEWAY (REST API)
-  # ------------------------------------------------------------------
   PhotoSearchAPI:
     Type: AWS::ApiGateway::RestApi
     Properties:
@@ -261,7 +239,6 @@ Resources:
       BinaryMediaTypes:
         - '*/*'
 
-  # /search
   SearchResource:
     Type: AWS::ApiGateway::Resource
     Properties:
@@ -281,7 +258,6 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SearchPhotosLambda.Arn}/invocations
 
-  # /photos
   PhotosResource:
     Type: AWS::ApiGateway::Resource
     Properties:
@@ -289,7 +265,6 @@ Resources:
       ParentId: !GetAtt PhotoSearchAPI.RootResourceId
       PathPart: photos
 
-  # /photos/{item}
   PhotosItemResource:
     Type: AWS::ApiGateway::Resource
     Properties:
@@ -297,7 +272,6 @@ Resources:
       ParentId: !Ref PhotosResource
       PathPart: '{item}'
 
-  # PUT /photos/{item} (S3 Proxy)
   PhotosPutMethod:
     Type: AWS::ApiGateway::Method
     Properties:
@@ -322,12 +296,25 @@ Resources:
           - StatusCode: 200
             ResponseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
+          - StatusCode: 400
+            SelectionPattern: '4\d{2}'
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+          - StatusCode: 500
+            SelectionPattern: '5\d{2}'
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'"
       MethodResponses:
         - StatusCode: 200
           ResponseParameters:
             method.response.header.Access-Control-Allow-Origin: true
+        - StatusCode: 400
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
+        - StatusCode: 500
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: true
 
-  # OPTIONS /photos/{item} (CORS)
   PhotosOptionsMethod:
     Type: AWS::ApiGateway::Method
     Properties:
@@ -352,7 +339,28 @@ Resources:
             method.response.header.Access-Control-Allow-Methods: true
             method.response.header.Access-Control-Allow-Origin: true
 
-  # Permission for API Gateway to invoke Search Lambda
+  GatewayResponseDefault4XX:
+    Type: AWS::ApiGateway::GatewayResponse
+    Properties:
+      RestApiId: !Ref PhotoSearchAPI
+      ResponseType: DEFAULT_4XX
+      ResponseParameters:
+        gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+        gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels'"
+      ResponseTemplates:
+        application/json: '{"message":$context.error.messageString}'
+
+  GatewayResponseDefault5XX:
+    Type: AWS::ApiGateway::GatewayResponse
+    Properties:
+      RestApiId: !Ref PhotoSearchAPI
+      ResponseType: DEFAULT_5XX
+      ResponseParameters:
+        gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+        gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token,x-amz-meta-customLabels'"
+      ResponseTemplates:
+        application/json: '{"message":$context.error.messageString}'
+
   SearchApiPermission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -361,18 +369,22 @@ Resources:
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${PhotoSearchAPI}/*
 
-  # Deployment
   ApiDeployment:
     Type: AWS::ApiGateway::Deployment
-    DependsOn: [SearchMethod, PhotosPutMethod, PhotosOptionsMethod]
+    DependsOn:
+      - SearchMethod
+      - PhotosPutMethod
+      - PhotosOptionsMethod
+      - GatewayResponseDefault4XX
+      - GatewayResponseDefault5XX
     Properties:
       RestApiId: !Ref PhotoSearchAPI
       StageName: prod
 
 Outputs:
   ApiEndpoint:
-    Description: "API Gateway Endpoint"
-    Value: !Sub "https://${PhotoSearchAPI}.execute-api.${AWS::Region}.amazonaws.com/prod"
+    Description: API Gateway Endpoint
+    Value: !Sub https://${PhotoSearchAPI}.execute-api.${AWS::Region}.amazonaws.com/prod
   FrontendURL:
-    Description: "Frontend URL"
+    Description: Frontend URL
     Value: !GetAtt FrontendBucket.WebsiteURL
