--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -456,6 +456,9 @@ Resources:
       AuthorizationType: NONE
       Integration:
         Type: MOCK
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+        PassthroughBehavior: WHEN_NO_MATCH
         IntegrationResponses:
           - StatusCode: 200
             ResponseParameters:
