--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -458,10 +458,7 @@ Resources:
       AuthorizationType: NONE
       Integration:
         Type: MOCK
-        RequestTemplates:
-          application/json: ''
-          '': ''
-        PassthroughBehavior: NEVER
+        PassthroughBehavior: WHEN_NO_MATCH
         IntegrationResponses:
           - StatusCode: 200
             ResponseParameters:
