--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -223,6 +223,8 @@ Resources:
                   "statusCode": 200,
                   "headers": {
                       "Access-Control-Allow-Origin": "*",
+                      "Access-Control-Allow-Methods": "GET,OPTIONS",
+                      "Access-Control-Allow-Headers": "Content-Type",
                       "Content-Type": "application/json"
                   },
                   "body": json.dumps(list(unique))
@@ -399,6 +401,32 @@ Resources:
         IntegrationHttpMethod: POST
         Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SearchPhotosLambda.Arn}/invocations
 
+  # OPTIONS /search (CORS)
+  SearchOptionsMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref PhotoSearchAPI
+      ResourceId: !Ref SearchResource
+      HttpMethod: OPTIONS
+      AuthorizationType: NONE
+      Integration:
+        Type: MOCK
+        RequestTemplates:
+          application/json: '{"statusCode": 200}'
+        PassthroughBehavior: WHEN_NO_MATCH
+        IntegrationResponses:
+          - StatusCode: 200
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
+              method.response.header.Access-Control-Allow-Origin: "'*'"
+      MethodResponses:
+        - StatusCode: 200
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Headers: true
+            method.response.header.Access-Control-Allow-Methods: true
+            method.response.header.Access-Control-Allow-Origin: true
+
   # /photos
   PhotosResource:
     Type: AWS::ApiGateway::Resource
@@ -439,7 +467,7 @@ Resources:
           - StatusCode: 200
             ResponseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type'"
+              method.response.header.Access-Control-Allow-Headers: "'*'"
       MethodResponses:
         - StatusCode: 200
           ResponseParameters:
@@ -484,7 +512,7 @@ Resources:
   # Deployment
   ApiDeployment:
     Type: AWS::ApiGateway::Deployment
-    DependsOn: [SearchMethod, PhotosPutMethod, PhotosOptionsMethod]
+    DependsOn: [SearchMethod, SearchOptionsMethod, PhotosPutMethod, PhotosOptionsMethod]
     Properties:
       RestApiId: !Ref PhotoSearchAPI
       StageName: prod
