--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -304,7 +304,7 @@ Resources:
   # ------------------------------------------------------------------
   ApiKey:
     Type: AWS::ApiGateway::ApiKey
-    DependsOn: ApiDeployment
+    DependsOn: ApiDeploymentWithOptions
     Properties:
       Name: PhotoSearchApiKey
       Enabled: true
@@ -314,7 +314,7 @@ Resources:
 
   UsagePlan:
     Type: AWS::ApiGateway::UsagePlan
-    DependsOn: ApiDeployment
+    DependsOn: ApiDeploymentWithOptions
     Properties:
       UsagePlanName: PhotoSearchUsagePlan
       ApiStages:
@@ -510,7 +510,7 @@ Resources:
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${PhotoSearchAPI}/*
 
   # Deployment
-  ApiDeployment:
+  ApiDeploymentWithOptions:
     Type: AWS::ApiGateway::Deployment
     DependsOn: [SearchMethod, SearchOptionsMethod, PhotosPutMethod, PhotosOptionsMethod]
     Properties:
